<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_previous_week"
        android:icon="@drawable/ic_action_previous_item"
        android:onClick="onOptionsItemSelected"
        android:orderInCategory="10"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_previous_week"/>
    <item
        android:id="@+id/action_next_week"
        android:icon="@drawable/ic_action_next_item"
        android:onClick="onOptionsItemSelected"
        android:orderInCategory="20"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_next_week"/>
    <item
        android:id="@+id/action_reload"
        android:icon="@drawable/ic_action_refresh"
        android:onClick="onOptionsItemSelected"
        android:orderInCategory="40"
        android:showAsAction="ifRoom"
        android:title="@string/action_reload"/>
    <item
        android:id="@+id/action_select_date"
        android:icon="@drawable/ic_action_go_to_today"
        android:onClick="onOptionsItemSelected"
        android:orderInCategory="30"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_select_date"/>
    <item
        android:id="@+id/action_grades"
        android:icon="@drawable/ic_4_collections_view_as_list"
        android:onClick="onOptionsItemSelected"
        android:orderInCategory="30"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_grades"/>
    <item
        android:id="@+id/action_select_pupil"
        android:icon="@drawable/ic_action_person"
        android:onClick="onOptionsItemSelected"
        android:orderInCategory="50"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_select_pupil"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:onClick="onOptionsItemSelected"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_logs"
        android:icon="@drawable/ic_11_alerts_and_states_warning"
        android:onClick="onOptionsItemSelected"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/action_logs"/>

</menu>