<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_select_date"
        android:icon="@drawable/ic_action_go_to_today"
        android:onClick="onOptionsItemSelected"
        android:orderInCategory="30"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_select_date"/>
    <item
        android:id="@+id/action_reload"
        android:icon="@drawable/ic_action_refresh"
        android:onClick="onOptionsItemSelected"
        android:orderInCategory="40"
        android:showAsAction="ifRoom"
        android:title="@string/action_reload"/>
    <item
        android:id="@+id/action_diary"
        android:icon="@drawable/ic_5_content_event"
        android:onClick="onOptionsItemSelected"
        android:orderInCategory="30"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_diary"/>
    <item
        android:id="@+id/action_select_pupil"
        android:icon="@drawable/ic_action_person"
        android:onClick="onOptionsItemSelected"
        android:orderInCategory="50"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_select_pupil"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:onClick="onOptionsItemSelected"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>